--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Filo Games: Videojuegos con profundidad filosófica, artística y cultural.">
     <meta name="keywords" content="videojuegos, filosofía, arte, cultura, Filo Games">
     <meta name="author" content="Luis Mercado">
-    <link rel="stylesheet" href="css/estilos.css">
-    <script defer src="js/funciones.js"></script>
+    <link rel="stylesheet" href="CSS/estilos.css">
+    <script defer src="JS/funciones.js"></script>
 </head>
 <body>
     <header>
